# termina

./: .coverage  .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  coverage.xml  download_whisper_models.py  ffmpeg_processor.py  pyproject.toml  requirements.txt  speech_providers.py  start_termina.command  termina.py  whisper_menu_app.py  whisper_models.py
.github/: dependabot.yml
.github/workflows/: ci.yml
icons/: termina_cute.icns
scripts/: com.termina.plist  com.termina.plist.template  create_app_bundle.sh  create_cute_icon.py  install_launch_agent.sh
tests/: __init__.py  test_basic.py
